--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,40 @@
 
 
-.cont{
+.nav{
 
 display: flex;
+height: 70px;
+background-color: rgb(195, 158, 138);
 
+}
+.logo{
+    position: absolute;
+    left: 10px;
 }
 
 .slide1{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+.row{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+.container{
+    width: 100%;
+    height: 100%;
+    padding: 40px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.cards{
+    
+    display: flex;
+    justify-content: center;
+    gap: 30px;
 }
