--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,12 @@
 
-
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    background-color:rgb(255, 250, 243);
+}
 .nav{
 
 display: flex;
@@ -37,4 +44,27 @@ background-color: rgb(195, 158, 138);
     display: flex;
     justify-content: center;
     gap: 30px;
+}
+
+.block{
+    width: 100%;
+    height: 130px;
+    background-color: rgb(195, 158, 138);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+.block button{
+    font-size: 20px;
+    background-color:rgb(255, 244, 230);
+    color: black;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    border-radius: 10px;
+
 }
